# mini-search-engine

./: .gitignore  README.md
backend/: package.json
backend/src/: index.ts
core/: CMakeLists.txt
core/src/: bm25.cpp  bm25.hpp  indexer.cpp  indexer.hpp  main.cpp  trie.cpp  trie.hpp
frontend/: package.json
